spinnaker-prod-baseline.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s1p-hello-service-baseline
  labels:
    app: s1p-hello-service
spec:
  selector:
    matchLabels:
      app: s1p-hello-service-baseline
  replicas: 1
  template:
    metadata:
      labels:
        app: s1p-hello-service-baseline
    spec:
      containers:
      - name: s1p-hello-service-baseline
        image: msathepivotal/s1p-hello-service:0.0.1-SNAPSHOT-20190930.161003Z.19ba3dc
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
