spinnaker-prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s1p-hello-service
  labels:
    app: s1p-hello-service
spec:
  selector:
    matchLabels:
      app: s1p-hello-service
  replicas: 3
  template:
    metadata:
      labels:
        app: s1p-hello-service
    spec:
      containers:
      - name: s1p-hello-service
        image: msathepivotal/s1p-hello-service:0.0.1-SNAPSHOT-20191008.155710Z.e05acd8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
