spinnaker-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s1p-hello-service
spec:
  selector:
    matchLabels:
      app: s1p-hello-service
  replicas: 1
  template:
    metadata:
      labels:
        app: s1p-hello-service
    spec:
      containers:
      - name: s1p-hello-service
        image: msathepivotal/s1p-hello-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: s1p-hello-service
  labels:
    app: s1p-hello-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: s1p-hello-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s1p-hello-service
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: hello-service.dev.spin.beirut.cf-app.com
    http:
      paths:
      - backend:
          serviceName: s1p-hello-service
          servicePort: 80
