spinnaker-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: s1p-hello-service
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: hello-service.spin.beirut.cf-app.com
    http:
      paths:
      - backend:
          serviceName: s1p-hello-service
          servicePort: 80
